# kimi-cli

./: .gitignore  CHANGELOG.md  Makefile  kimi.spec  plugin-marketplace-rfc.md  pyproject.toml
docs/: claude-code-marketplace-reference.md
docs/en/configuration/: config-files.md  data-locations.md  env-vars.md  overrides.md
docs/en/customization/: agents.md  mcp.md  plugins.md  print-mode.md  skills.md  wire-mode.md
docs/en/guides/: interaction.md  sessions.md
docs/en/reference/: keyboard.md  kimi-command.md  kimi-info.md  kimi-term.md  slash-commands.md
docs/en/release-notes/: breaking-changes.md  changelog.md
docs/zh/configuration/: config-files.md  (+3 more)
examples/custom-echo-soul/: main.py
examples/custom-kimi-soul/: main.py
scripts/: inject_build_sha.py  install.ps1  telemetry_debug_server.py
src/kimi_cli/: __main__.py  app.py  config.py  constant.py  llm.py  session_state.py
tests/: conftest.py  test_additional_dirs_state.py  test_clipboard.py  test_constant.py
tests/acp/: test_session_notifications.py
tests/auth/: test_oauth_refresh.py  test_platforms.py  test_resolve_api_key.py
tests/background/: test_manager.py
tests/core/: test_afk_injection.py  test_approval_afk.py  test_approval_runtime.py  test_config.py  test_create_llm.py  test_default_agent.py  test_dynamic_injection_hooks.py  test_kimisoul_background_wait.py  test_kimisoul_retry_recovery.py  test_kimisoul_slash_commands.py  test_load_agent.py  test_notifications.py  test_plan_flag.py  test_plugin.py  test_plugin_manager.py  test_print_background_integration.py  test_runtime_afk_state.py  test_session_logging.py  test_session_state.py  test_shutdown_background_tasks.py  test_skill.py  test_skills_prompt.py  test_skip_afk_prompt_injection.py  test_slash_afk.py  test_startup_imports.py  test_startup_progress.py  test_wire_message.py  test_wire_server_steer.py
tests/e2e/: test_kimi_empty_tool_call_content_e2e.py
tests/hooks/: test_engine.py
tests/marketplace/: test_cache.py  test_cli.py  test_errors.py  test_integration.py  test_loader.py  test_manager.py  test_operations.py  test_reconciler.py  test_schemas.py
tests/telemetry/: test_crash.py  test_instrumentation.py  test_telemetry.py
tests/tools/: test_ask_user.py  test_plan_yolo.py  test_read_file.py  test_shell_bash.py  test_tool_descriptions.py
tests/ui/: test_usage.py
tests/ui_and_conv/: test_empty_think_part_indicator.py  test_modal_lifecycle.py  test_print_notifications.py  test_prompt_tips.py  test_shell_prompt_echo.py  test_shell_run_placeholders.py  test_slash_completer.py  test_visualize_running_prompt.py
tests/utils/: test_normalize_user_path.py  test_pyinstaller_utils.py  test_shell_quoting.py  test_utils_environment.py  test_windows_paths.py
tests/web/: test_sessions_api.py
tests_ai/accuracy_smoke/: README.md  local_kimi_cli_agent.py  terminal_bench_2_tasks_default.txt
tests_e2e/: test_wire_protocol.py  test_wire_sessions.py
(+98 files in other folders)
